--- a/exam_config.json
+++ b/exam_config.json
@@ -1,7 +1,7 @@
 {
     "二等": {
         "description": "二等無人航空機操縦士（基礎）",
-        "scope_instruction": "【二等試験の出題範囲 (基礎)】\n提供された教則PDFの内容に基づいて作成してください。\n✅ 必須: 「レベル3.5飛行（立入管理措置を講じた上での目視外飛行）」に関する問題を含めてください。\n❌ 禁止: カテゴリーIII飛行（第三者上空飛行）そのものに関する高度なリスク評価\n❌ 禁止: 飛行性能に関する複雑な計算問題（物理計算など）",
+        "scope_instruction": "【二等試験の出題範囲 (基礎)】\n提供された教則PDFの内容に基づいて作成してください。\n✅ 重点（該当する章の場合）: 「レベル3.5飛行（立入管理措置を講じた上での目視外飛行）」に関する記述がある場合は、優先的に問題にしてください。\n❌ 禁止: カテゴリーIII飛行（第三者上空飛行）そのものに関する高度なリスク評価\n❌ 禁止: 飛行性能に関する複雑な計算問題（物理計算など）",
         "weights": {
             "第2章 無人航空機操縦者の心得": 3,
             "第3章 無人航空機に関する規則": 17,
@@ -12,7 +12,7 @@
     },
     "一等": {
         "description": "一等無人航空機操縦士（応用）",
-        "scope_instruction": "【一等試験の出題範囲 (応用)】\n教則PDFの全範囲から出題してください。\n✅ 重点: カテゴリーIII飛行のリスク評価、フェールセーフ機能、リスク軽減策\n✅ 重点: 飛行性能の物理計算（揚力、旋回半径、滑空距離、エネルギー等の計算問題）\n✅ 重点: レベル3.5飛行とカテゴリーIIIの違い",
+        "scope_instruction": "【一等試験の出題範囲 (応用)】\n教則PDFの全範囲から出題してください。\n✅ 重点（該当する章の場合）: カテゴリーIII飛行のリスク評価、フェールセーフ機能、リスク軽減策\n✅ 重点（該当する章の場合）: 飛行性能の物理計算（揚力、旋回半径、滑空距離、エネルギー等の計算問題）\n✅ 重点: レベル3.5飛行とカテゴリーIIIの違い",
         "weights": {
             "第2章 無人航空機操縦者の心得": 4,
             "第3章 無人航空機に関する規則": 24,
